'or' spacing fixed

--- a/src/assets/scss/application.scss
+++ b/src/assets/scss/application.scss
@@ -45,3 +45,8 @@ $govuk-assets-path: "/public/";
 .hint-with-margin {
   margin-top: 30px;
 }
+
+.govuk-radios__divider{
+  margin-bottom: 15px;
+  margin-top: -15px;
+}
